feat: added rock spawner app type (wip)